--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ nav .inner button{
     color: var(--pure);
     font-size: 14px;
     border-radius: 4px;
+    cursor: pointer;
 }
 section.profile {
     background: var(--black);
